--- a/oceanStream/templates/home/index.html.twig
+++ b/oceanStream/templates/home/index.html.twig
@@ -6,9 +6,9 @@
     <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <<div class="jumbotron">
+    <div class="jumbotron">
     <div class="container overflow-hidden">
-        <div class="row gx-5">
+        <div class="row">
             <div class="col">
                 <div class="p-3 border bg-light">
                     <fieldset >
