--- a/oceanStream/templates/base.html.twig
+++ b/oceanStream/templates/base.html.twig
@@ -36,7 +36,7 @@
                                 </div>
                                 <div class="col">
                                             {% if app.user %}
-                                                <a href="{{ path("home") }}"><p class="text-primary"><i class="fas fa-user-circle fa-3x" id="user"> Profil</i></p></a>
+                                                <a href="{{ path("user_index") }}"><p class="text-primary"><i class="fas fa-user-circle fa-3x" id="user"> Profil</i></p></a>
                                             {% endif %}
 
                                     <a href="{{ path("home") }}"><p class="text-primary"><i class="fas fa-user-circle fa-3x" id="user"> Se connecter</i></p></a>
