--- a/oceanStream/templates/user/create.html.twig
+++ b/oceanStream/templates/user/create.html.twig
@@ -3,9 +3,13 @@
 {% block title %}New User{% endblock %}
 
 {% block body %}
-    <h1>Create new User</h1>
+    <h1><center>Inscription sur le site</center></h1>
+    <br>
+    {{ form_start(form)}}
+    {{ form_row(form.username, {'label': 'Nom d\'utilisateur','attr' : {'placeholder' : 'Pseudo...'}}) }}
+    {{ form_row(form.email, {'label':'Adresse mail ','attr' : {'placeholder' : 'Adresse mail...'}}) }}
+    {{ form_row(form.password,{'label':'Mot de passe ','attr' : {'placeholder' : 'Mot de passe'}}) }}
 
-    {{ include('user/_form.html.twig') }}
-
-    <a href="{{ path('user_index') }}">back to list</a>
+    <button type="submit" class ="btn btn-success">S'inscrire !</button>
+    {{ form_end(form) }}
 {% endblock %}
