maj front connexion

--- a/oceanStream/templates/base.html.twig
+++ b/oceanStream/templates/base.html.twig
@@ -32,14 +32,16 @@
                         <div class="container overflow-hidden">
                             <div class="row gx-5">
                                 <div class="col">
-                                    <i class="far fa-question-circle fa-3x" id="question"></i>
+                                    {% if app.user %}
+                                        <i class="far fa-question-circle fa-3x" id="question"></i>
+                                    {% endif %}
                                 </div>
                                 <div class="col">
                                             {% if app.user %}
                                                 <a href="{{ path("user_index") }}"><p class="text-primary"><i class="fas fa-user-circle fa-3x" id="user"> Profil</i></p></a>
                                             {% endif %}
 
-                                    <a href="{{ path("home") }}"><p class="text-primary"><i class="fas fa-user-circle fa-3x" id="user"> Se connecter</i></p></a>
+                                    <a href="{{ path("app_login") }}"><p class="text-primary"><i class="fas fa-user-circle fa-3x" id="user"> Se connecter</i></p></a>
                                 </div>
                             </div>
                         </div>
