--- a/oceanStream/templates/security/login.html.twig
+++ b/oceanStream/templates/security/login.html.twig
@@ -33,7 +33,10 @@
 
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                 <br>
-                <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
+                <button class="btn btn-primary btn-lg btn-block" type="submit">Connexion</button>
+                <br>
+                <center><p>Pas encore de compte ? <a href="{{ path("user_create") }}">Créer un compte</a> </p>
+                </center>
             </form>
         </div>
     </div>
