--- a/oceanStream/templates/user/read.html.twig
+++ b/oceanStream/templates/user/read.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}Profil{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <h1>{{ user.username }}</h1>
 
     <table class="table">
         <tbody>
@@ -26,9 +26,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('user_index') }}">back to list</a>
-
-    <a href="{{ path('user_update', {'id': user.id}) }}">update</a>
+    <button type="button" class="btn btn-info"><a href="{{ path('user_update', {'id': user.id}) }}">Modifier information</a></button>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
