--- a/oceanStream/templates/home/index.html.twig
+++ b/oceanStream/templates/home/index.html.twig
@@ -37,7 +37,7 @@
                                         </div>
                                     </div>
                                     <div class="col">
-                                        <div class="p-3 border bg-light"><center><a type="button" class="btn btn-primary" href="{{ path('menu') }}">Commencer</a></center>
+                                        <div class="p-3 border bg-light"><center><a type="button" class="btn btn-primary" href="{{ path('meu') }}">Commencer</a></center>
                                         </div>
                                     </div>
                                 </div>
