--- a/oceanStream/templates/base.html.twig
+++ b/oceanStream/templates/base.html.twig
@@ -7,6 +7,7 @@
 
         {% block stylesheets %}
             <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
+            <link href="{{ asset('assets/css/footer.css') }}" rel="stylesheet" />
         {% endblock %}
 
         {% block javascripts %}
@@ -55,13 +56,10 @@
                 <br>
 
                 {% block footer %}
-                    <footer>
-                        <center><i class="fas fa-chevron-circle-down fa-3x"></i><center>
-                    </footer>
                 {% endblock %}
             </div>
         </div>
+
+
     </body>
-
-
 </html>
