--- a/oceanStream/templates/home/index.html.twig
+++ b/oceanStream/templates/home/index.html.twig
@@ -6,8 +6,8 @@
     <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom stylesheet -->
-    <link rel="stylesheet" href="asset/css/style.css">
-    <link rel="stylesheet" href="asset/css/home.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/home.css">
 
 
 </head>
