chemin assets réparé

--- a/oceanStream/templates/home/index.html.twig
+++ b/oceanStream/templates/home/index.html.twig
@@ -6,8 +6,8 @@
     <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom stylesheet -->
-    <link rel="stylesheet" href="asset/css/style.css">
-    <link rel="stylesheet" href="asset/css/home.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/home.css">
 
 
 </head>
@@ -34,12 +34,7 @@
                                             </fieldset>
                                     </div>
                                     <div class="col">
-<<<<<<< HEAD
                                        <a type="button" class="btn btn-primary btn-start" href="{{ path('menu') }}">Commencer</a>
-=======
-                                        <div class="p-3 border bg-light"><center><a type="button" class="btn btn-primary" href="{{ path('menu') }}">Commencer</a></center>
-                                        </div>
->>>>>>> da95c8392856b91291b17075fba2de6771882ec5
                                     </div>
                                 </div>
                             </div>
