--- a/oceanStream/templates/menu/index.html.twig
+++ b/oceanStream/templates/menu/index.html.twig
@@ -10,7 +10,7 @@
             <h1>Jeu de l'eau</h1>
             <div class="btn-group-vertical">
 
-                <a type="button" class="btn btn-primary" href="{{ path('home') }}">Nouvelle partie</a>
+                <a type="button" class="btn btn-primary" href="{{ path('select_mode') }}">Nouvelle partie</a>
                 <br>
                 <a type="button" class="btn btn-primary" href="{{ path('home') }}">Charger partie</a>
                 <br>
