--- a/oceanStream/templates/user/index.html.twig
+++ b/oceanStream/templates/user/index.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}User index{% endblock %}
 
+{% block stylesheets %}
+    <link href="{{ asset('assets/css/userProfile.css') }}" rel="stylesheet" />
+{% endblock %}
+
 {% block body %}
     <h1>User index</h1>
 
