--- a/oceanStream/templates/user/read.html.twig
+++ b/oceanStream/templates/user/read.html.twig
@@ -2,31 +2,49 @@
 
 {% block title %}Profil{% endblock %}
 
+{% block stylesheets %}
+    <link href="{{ asset('assets/css/userProfile.css') }}" rel="stylesheet" />
+{% endblock %}
+
 {% block body %}
-    <h1>{{ user.username }}</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
-            <tr>
-                <th>Username</th>
-                <td>{{ user.username }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ user.email }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <button type="button" class="btn btn-info"><a href="{{ path('user_update', {'id': user.id}) }}">Modifier information</a></button>
+    <div class="container px-4" id="profile-container">
+        <div class="row gx-5">
+            <div class="col">
+                <div class="p-3 border bg-light userProfile ">
+                    <i class="fas fa-user-circle fa-3x"></i>
+                    <p> {{ user.username }}</p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3 border bg-light serInfo">
+                    <table class="table ">
+                        <tbody>
+                        <tr>
+                            <th>Id User</th>
+                            <td>{{ user.id }}</td>
+                        </tr>
+                        <tr>
+                            <th>Username</th>
+                            <td>{{ user.username }}</td>
+                        </tr>
+                        <tr>
+                            <th>Email</th>
+                            <td>{{ user.email }}</td>
+                        </tr>
+                        <tr>
+                            <th>Password</th>
+                            <td>{{ user.password }}</td>
+                        </tr>
+                        </tbody>
+                        <td>
+                            <button type="button" class="btn btn-info"><a href="{{ path('user_update', {'id': user.id}) }}">Modifier information</a></button>
+                        </td>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
