--- a/oceanStream/templates/menu/index.html.twig
+++ b/oceanStream/templates/menu/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <center>
         <div class="menu">
-            <img src="{{ absolute_url(asset('assets/img/logo.png')) }}" alt="Logo">
+            <img src="{{ absolute_url(assets('assets/img/logo.png')) }}" alt="Logo">
             <br>
             <h1>Jeu de l'eau</h1>
             <div class="btn-group-vertical">
