--- a/oceanStream/templates/base.html.twig
+++ b/oceanStream/templates/base.html.twig
@@ -6,7 +6,7 @@
     <script src="https://kit.fontawesome.com/316d042b66.js" crossorigin="anonymous"></script>
 
     <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ asset('assets/css/base.css') }}" rel="stylesheet" />
+    <link href="{{ assets('assets/css/base.css') }}" rel="stylesheet" />
     {% block stylesheets %}
     {% endblock %}
 
@@ -25,7 +25,7 @@
                                 <a href="{{ path("user_read", {'id': app.user.id}) }}" id="header"><p><i class="fas fa-user-circle fa-3x" id="user"> {{ app.user.username }}</i></a>
                             {% endif %}
                             {% if not app.user %}
-                                <a href="{{ path("home") }}" id="header"><p><i class="fas fa-user-circle fa-3x" id="user"> Se connecter</i></p></a>
+                                <a href="{{ path("app_login") }}" id="header"><p><i class="fas fa-user-circle fa-3x" id="user"> Se connecter</i></p></a>
                             {% endif %}
                         </div>
                     </div>
