--- a/oceanStream/templates/menu/index.html.twig
+++ b/oceanStream/templates/menu/index.html.twig
@@ -3,13 +3,13 @@
 {% block title %}Menu{% endblock %}
 
 {% block stylesheets %}
-    <link href="{{ asset('assets/css/menu.css') }}" rel="stylesheet" />
+    <link href="{{ assets('assets/css/menu.css') }}" rel="stylesheet" />
 {% endblock %}
 
 {% block body %}
     <center>
         <div class="menu">
-            <img src="{{ absolute_url(asset('assets/img/logo.png')) }}" alt="Logo">
+            <img src="{{ absolute_url(assets('assets/img/logo.png')) }}" alt="Logo">
             <!--<h1 id="jeuDeLeau">Jeu de l'eau</h1>-->
 
             <span class="back">
