--- a/oceanStream/templates/game/gameBase.html.twig
+++ b/oceanStream/templates/game/gameBase.html.twig
@@ -78,8 +78,9 @@
 
         {% block body %}
             <body>
-                <div class="carre_fond"></div>
-                <div class="carre_choix"></div>
+                <div class="carre_fond">
+                    <div class="carre_choix"> </div>
+                </div>
             </body>
         {% endblock %}
 
