--- a/oceanStream/templates/game/gameBase.html.twig
+++ b/oceanStream/templates/game/gameBase.html.twig
@@ -36,6 +36,11 @@
         color : white;
     }
 
+    #nouvelle_partie {
+        text-align: center;
+        padding: 1em ;
+    }
+
 </style>
 
 <body>
@@ -67,8 +72,12 @@
     </div>
         <br>
 
+    <div id="nouvelle_partie"><h1><b>Nouvelle partie</b></h1></div>
     <div class="carre_fond">
-            {% block body %}Je suis dans la div{% endblock %}
+            {% block body %}
+
+
+            {% endblock %}
     </div>
 
 
