--- a/oceanStream/templates/user/update.html.twig
+++ b/oceanStream/templates/user/update.html.twig
@@ -1,13 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Modifier utilisateur{% endblock %}
+
+{% block stylesheets %}
+    <link href="{{ asset('assets/css/userProfile.css') }}" rel="stylesheet" />
+{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+    <p class="p-titre">Modifier mon compte</p>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+    <div class="container px-4 bg-profile">
+        {{ include('user/_form.html.twig', {'button_label': 'Sauvegarder'}) }}
 
-    <a href="{{ path('user_index') }}">back to list</a>
 
-    {{ include('user/_delete_form.html.twig') }}
+        {{ include('user/_delete_form.html.twig') }}
+    </div>
+
 {% endblock %}
