--- a/oceanStream/templates/user/_delete_form.html.twig
+++ b/oceanStream/templates/user/_delete_form.html.twig
@@ -1,7 +1,7 @@
 <link href="{{ asset('assets/css/userProfile.css') }}" rel="stylesheet" />
 
-<form method="post" action="{{ path('user_delete', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('user_delete', {'id': user.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer ce compte ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-supp">Supprimer compte</button>
 </form>
