--- a/oceanStream/templates/board/index.html.twig
+++ b/oceanStream/templates/board/index.html.twig
@@ -4,12 +4,20 @@
 
 {% block body %}
 <div>
+    {% if rolldice is defined %}
+        <div>Dés : {{ rolldice }}</div>
+    {% endif %}
+    <a href="{{ path('dice', {'id': token.id}) }}">Lancer dés</a>
     <table class="table table-hover">
         <tbody>
         {% for row in eventsToView | batch(8) %}
             <tr class="table-active">
                 {% for event in row %}
-                    <td>{{ event.nameEvent }}</td>
+                    <td>{{ event.nameEvent }}
+                        {% if event is same as(token.event) %}
+                             : {{ token.color }}
+                        {% endif %}
+                    </td>
                 {% endfor %}
             </tr>
         {% endfor %}
