--- a/oceanStream/templates/menu/index.html.twig
+++ b/oceanStream/templates/menu/index.html.twig
@@ -30,7 +30,7 @@
             <br>
             <div class="btn-group-vertical">
 
-                <a type="button" class="btn btn-menu" href="{{ path('select_mode') }}">Nouvelle partie</a>
+                <a type="button" class="btn btn-menu" href="{{ path('home') }}">Nouvelle partie</a>
                 <br>
                 <a type="button" class="btn btn-menu" href="{{ path('home') }}">Charger partie</a>
                 <br>
