--- a/oceanStream/templates/user/_form.html.twig
+++ b/oceanStream/templates/user/_form.html.twig
@@ -1,3 +1,5 @@
+<link href="{{ asset('assets/css/userProfile.css') }}" rel="stylesheet" />
+
 {{ form_start(form) }}
 
     {{ form_row(form.username,{'attr':{'class':'label'}}) }}
