--- a/oceanStream/templates/board/index.html.twig
+++ b/oceanStream/templates/board/index.html.twig
@@ -2,26 +2,36 @@
 
 {% block title %}Ocean Stream{% endblock %}
 
+{% block stylesheets %}
+{% endblock %}
+
 {% block body %}
-<div>
-    {% if rolldice is defined %}
-        <div>Dés : {{ rolldice }}</div>
-    {% endif %}
-    <a href="{{ path('dice', {'id': token.id}) }}">Lancer dés</a>
-    <table class="table table-hover">
-        <tbody>
-        {% for row in eventsToView | batch(8) %}
-            <tr class="table-active">
-                {% for event in row %}
-                    <td>{{ event.nameEvent }}
-                        {% if event is same as(token.event) %}
-                             : {{ token.color }}
-                        {% endif %}
-                    </td>
-                {% endfor %}
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+<div class="container px-4">
+    <div class="jumbotron table-responsive">
+
+        <button class="btn-primary mb-4" style="float: left">
+            <a id="dice" href="{{ path('dice', {'id': token.id}) }}">Lancer dés</a>
+        </button>
+
+        {% if rolldice is defined %}
+            <div>Total des dés : {{ rolldice }}</div>
+        {% endif %}
+
+        <table class="table">
+            <tbody>
+            {% for row in eventsToView | batch(8) %}
+                <tr class="table-active">
+                    {% for event in row %}
+                        <td>{{ event.nameEvent }}
+                            {% if event is same as(token.event) %}
+                                 : {{ token.color }}
+                            {% endif %}
+                        </td>
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
 {% endblock %}
